frontend-main/kubernetes/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: esgi-chancy-4al1
  name: frontend-deployment
  labels:
    demo.app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      demo.app: frontend
  template:
    metadata:
      labels:
        demo.app: frontend
    spec:
      containers:
        - name: frontend
          image: catri-01/devops-esgi
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  namespace: esgi-chancy-4al1
  name: frontend-service
spec:
  selector:
    demo.app: frontend
  ports:
    - protocol: TCP
      port: 4566
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: esgi-chancy-4al1
  labels:
    app.kubernetes.io/component: controller
  # Mettre un nom unique pour la classe ingress
  name: ubuntu
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-demo-ingress
  namespace: demo
spec:
  # Récupérer le nom de la classe ingress ici
  ingressClassName: ubuntu-demo
  tls:
    - hosts:
        - frontend.demo.jbienvenu.fr
      secretName: frontend-demo-tls
  rules:
    - host: frontend.demo.jbienvenu.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-demo-service
                port:
                  number: 4566
